@@ -1,7 +1,7 @@
 /*
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS HEADER.
  *
- * Copyright 1997-2007 Sun Microsystems, Inc. All rights reserved.
+ * Copyright 1997-2008 Sun Microsystems, Inc. All rights reserved.
  *
  * The contents of this file are subject to the terms of either the GNU
  * General Public License Version 2 only ("GPL") or the Common Development
@@ -43,7 +43,11 @@ import javax.mail.*;
 import javax.mail.internet.*;
 
 /**
- * DataContentHandler for text/rfc822-headers.
+ * DataContentHandler for text/rfc822-headers MIME type.
+ * Applications should not use this class directly, it's used indirectly
+ * through the JavaBeans Activation Framework.
+ *
+ * @since	JavaMail 1.4
  *
  */
 public class text_rfc822headers implements DataContentHandler {
